objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Reason__c</fullName>
        <label>Not Interested Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Too Small</fullName>
                </value>
                <value>
                    <fullName>Office Configuration Unsuitable</fullName>
                </value>
                <value>
                    <fullName>Cultural Fit</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No availability</fullName>
                </value>
                <value>
                    <fullName>I'm not ready for an office quite yet</fullName>
                </value>
                <value>
                    <fullName>I found another office space solution</fullName>
                </value>
                <value>
                    <fullName>Pricing is not in my budget</fullName>
                </value>
                <value>
                    <fullName>Location isn't ideal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Desks_2016__c</fullName>
        <description>This is a new field to capture no of desks from website and other external systems, moving forward we will be referring this field only</description>
        <label>Number of Desks 2016</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 desk</fullName>
                </value>
                <value>
                    <fullName>2-5 desks</fullName>
                </value>
                <value>
                    <fullName>6-10 desks</fullName>
                </value>
                <value>
                    <fullName>11-20 desks</fullName>
                </value>
                <value>
                    <fullName>21-50 desks</fullName>
                </value>
                <value>
                    <fullName>51+ desks</fullName>
                </value>
                <value>
                    <fullName>1desk</fullName>
                </value>
                <value>
                    <fullName>20-100 People</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Desks__c</fullName>
        <label>Number of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Journeys__c</fullName>
        <description>Captures the number of Journeys irrespective of the status on Lead</description>
        <label>Number of Journeys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurture_Reason__c</fullName>
        <label>Nurture Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Event Space Inquiry</fullName>
                </value>
                <value>
                    <fullName>Unable to reach, but a good fit</fullName>
                </value>
                <value>
                    <fullName>No immediate need/budget</fullName>
                </value>
                <value>
                    <fullName>With competitor/another lease</fullName>
                </value>
                <value>
                    <fullName>Location not currently available</fullName>
                </value>
                <value>
                    <fullName>NMD qualified</fullName>
                </value>
                <value>
                    <fullName>NMD follow-up request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Nurture due to journey expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Redeem_Instruction__c</fullName>
        <label>Offer Redeem Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <label>Office Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared Desk</fullName>
                </value>
                <value>
                    <fullName>Lounge Membership</fullName>
                </value>
                <value>
                    <fullName>Daily Desk</fullName>
                </value>
                <value>
                    <fullName>Hot desk</fullName>
                </value>
                <value>
                    <fullName>Dedicated Desk</fullName>
                </value>
                <value>
                    <fullName>Private 1 Person</fullName>
                </value>
                <value>
                    <fullName>Private 2 Person</fullName>
                </value>
                <value>
                    <fullName>Private 3 Person</fullName>
                </value>
                <value>
                    <fullName>Private 4 Person</fullName>
                </value>
                <value>
                    <fullName>Private 5 Person</fullName>
                </value>
                <value>
                    <fullName>Private 6 Person</fullName>
                </value>
                <value>
                    <fullName>Private 8 Person</fullName>
                </value>
                <value>
                    <fullName>Private 10 Person</fullName>
                </value>
                <value>
                    <fullName>Private 10 Person+</fullName>
                </value>
                <value>
                    <fullName>Commons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Identification_Status__c</fullName>
        <defaultValue>"Pending"</defaultValue>
        <description>This field will tell us whether record is processed by Scheduled Batch or not.</description>
        <inlineHelpText>If lead is not processed by batch then status will be "Pending",
If lead is processed by batch then status will be "Processed"</inlineHelpText>
        <label>Org Identification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Email_1_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Email 1 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_2_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Email 2 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_3_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Email 3 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in outreach</description>
        <label>Outreach Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Lead_Score__c</fullName>
        <description>Used for tracking SFMC overall lead score</description>
        <label>Overall Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Benefit_Additional_Description__c</fullName>
        <label>Partner Benefit Additional Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Benefits__c</fullName>
        <label>Partner Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>US-Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>APAC-Only</fullName>
                </value>
                <value>
                    <fullName>EMEA-Only</fullName>
                </value>
                <value>
                    <fullName>LATAM-Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Offerings__c</fullName>
        <description>This field is use to store value for partners offering</description>
        <label>Partner Offerings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_City__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_Country__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_PostalCode__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_State__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_Street__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Stage__c</fullName>
        <defaultValue>"Created"</defaultValue>
        <label>Processing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Demographic Scored</fullName>
                </value>
                <value>
                    <fullName>Market Identified</fullName>
                </value>
                <value>
                    <fullName>Assignment Complete</fullName>
                </value>
                <value>
                    <fullName>Behavioural Scored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wework.com Membership</fullName>
                </value>
                <value>
                    <fullName>Office Space</fullName>
                </value>
                <value>
                    <fullName>Residential Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork</fullName>
                </value>
                <value>
                    <fullName>WeLive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_Location__c</fullName>
        <externalId>true</externalId>
        <label>Quick Quote Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_For_Interested_Number_Of_Desk__c</fullName>
        <description>This field is used to match with Interested Number Of Desks field on Lead Score Table object to match range for same.</description>
        <formula>If(Interested_in_Number_of_Desks__c &gt;= 2 &amp;&amp; Interested_in_Number_of_Desks__c &lt;= 9,'2-9', 
If(Interested_in_Number_of_Desks__c &gt;= 10 &amp;&amp; Interested_in_Number_of_Desks__c &lt;= 20,'10-20', 
If(Interested_in_Number_of_Desks__c &gt;= 21 &amp;&amp; Interested_in_Number_of_Desks__c &lt;= 100,'21-100', 
If(Interested_in_Number_of_Desks__c &gt;= 101 &amp;&amp; Interested_in_Number_of_Desks__c &lt;= 999,'101-999', 
If(Interested_in_Number_of_Desks__c &gt;= 1000,'1000+', 
If(Interested_in_Number_of_Desks__c = 1,'1',''))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used to match with Interested Number Of Desks field on Lead Score Table object to match range for same.</inlineHelpText>
        <label>Range For Interested Number Of Desk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassignment_On_User_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassignment On User Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Company_Name__c</fullName>
        <description>Captures the Account name of the Referrer who has referred the lead</description>
        <formula>Referrer__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Account name of the Referrer who has referred the lead</inlineHelpText>
        <label>Referral Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Fail_Reason__c</fullName>
        <label>Referral Fail Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <label>Referral ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_ACH__c</fullName>
        <label>Referrer ACH</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <description>Captures the referrer's city to which s/he belongs</description>
        <inlineHelpText>Captures the referrer's city to which s/he belongs</inlineHelpText>
        <label>Referrer City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <label>Referrer Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Qualification__c</fullName>
        <label>Referrer Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n/a</fullName>
                    <default>true</default>
                    <label>n/a</label>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the contact who referred us the Lead. It can be a member, employee or a broker.</description>
        <inlineHelpText>Enter the contact who referred us the Lead. It can be a member, employee or a broker.</inlineHelpText>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referrer)</relationshipLabel>
        <relationshipName>ReferredLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restart_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restart Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c), 5) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_Lead_Forcefully_DateTime__c</fullName>
        <formula>(Unomy_Updated_DateTime__c  + (4/24/60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Lead Forcefully DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track who has opted in for SMS communications in the China region.</description>
        <label>SMS Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_Name__c</fullName>
        <description>Salutation name used on Email Templates (Hi John Doe)</description>
        <formula>SUBSTITUTE( FirstName ,'[not provided]', '') + ' ' + SUBSTITUTE( LastName ,'[not provided]', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Day_Response__c</fullName>
        <description>Inquiry date = last activity date</description>
        <formula>LastActivityDate  =  Inquiry_Date__c</formula>
        <label>Same Day Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_For_Forcefully_Lead_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send For Forcefully Lead Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sfz_Prospect_ID__c</fullName>
        <label>ServiceFriendz Prospect ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_of_Startup__c</fullName>
        <label>Stage of Startup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Funded</fullName>
                </value>
                <value>
                    <fullName>Friends and Family</fullName>
                </value>
                <value>
                    <fullName>Angel</fullName>
                </value>
                <value>
                    <fullName>Seed</fullName>
                </value>
                <value>
                    <fullName>Series A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Startup_Pitch__c</fullName>
        <label>Startup Pitch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Tours__c</fullName>
        <label>Total Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <label>Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Day__c</fullName>
        <description>For Unbounce landing pages</description>
        <label>Tour Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Notes__c</fullName>
        <label>Tour Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Scheduled__c</fullName>
        <inlineHelpText>the date when the tour was scheduled, not the date when the tour is.</inlineHelpText>
        <label>Tour Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Time__c</fullName>
        <label>Tour Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10:00am</fullName>
                </value>
                <value>
                    <fullName>10:30am</fullName>
                </value>
                <value>
                    <fullName>11:00am</fullName>
                </value>
                <value>
                    <fullName>11:30am</fullName>
                </value>
                <value>
                    <fullName>12:00pm</fullName>
                </value>
                <value>
                    <fullName>12:30pm</fullName>
                </value>
                <value>
                    <fullName>1:00pm</fullName>
                </value>
                <value>
                    <fullName>1:30pm</fullName>
                </value>
                <value>
                    <fullName>2:00pm</fullName>
                </value>
                <value>
                    <fullName>2:30pm</fullName>
                </value>
                <value>
                    <fullName>3:00pm</fullName>
                </value>
                <value>
                    <fullName>3:30pm</fullName>
                </value>
                <value>
                    <fullName>4:00pm</fullName>
                </value>
                <value>
                    <fullName>4:30pm</fullName>
                </value>
                <value>
                    <fullName>5:00pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ts_and_Cs_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ts and Cs Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Space</fullName>
                    <default>true</default>
                    <label>Office Space</label>
                </value>
                <value>
                    <fullName>Network Membership</fullName>
                </value>
                <value>
                    <fullName>Premium Network Membership</fullName>
                </value>
                <value>
                    <fullName>Event Space</fullName>
                </value>
                <value>
                    <fullName>Commons</fullName>
                </value>
                <value>
                    <fullName>Residential Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Acquisitions__c</fullName>
        <label>Unomy Acquisitions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_Global_Rank__c</fullName>
        <label>Unomy Alexa Global Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_US_Rank__c</fullName>
        <label>Unomy Alexa US Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Available_Contacts__c</fullName>
        <label>Unomy Available Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Email__c</fullName>
        <label>Unomy Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_ID__c</fullName>
        <label>Unomy Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Name__c</fullName>
        <label>Unomy Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Phone__c</fullName>
        <label>Unomy Company Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Max__c</fullName>
        <label>Unomy Company Size Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Min__c</fullName>
        <label>Unomy Company Size Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size__c</fullName>
        <label>Unomy Company Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Stock_Symbol__c</fullName>
        <label>Unomy Company Stock Symbol</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Website__c</fullName>
        <label>Unomy Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Administration__c</fullName>
        <label>Unomy Contacts Job Administration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Consulting__c</fullName>
        <label>Unomy Contacts Job Consulting</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Creative__c</fullName>
        <label>Unomy Contacts Job Creative</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Engineering__c</fullName>
        <label>Unomy Contacts Job Engineering</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Finance__c</fullName>
        <label>Unomy Contacts Job Finance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Human_Resources__c</fullName>
        <label>Unomy Contacts Job Human Resources</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_IT__c</fullName>
        <label>Unomy Contacts Job IT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Legal__c</fullName>
        <label>Unomy Contacts Job Legal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Marketing__c</fullName>
        <label>Unomy Contacts Job Marketing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Medical__c</fullName>
        <label>Unomy Contacts Job Medical</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Operations__c</fullName>
        <label>Unomy Contacts Job Operations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Other__c</fullName>
        <label>Unomy Contacts Job Other</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Product__c</fullName>
        <label>Unomy Contacts Job Product</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Sales__c</fullName>
        <label>Unomy Contacts Job Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Support__c</fullName>
        <label>Unomy Contacts Job Support</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Training__c</fullName>
        <label>Unomy Contacts Job Training</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_C_Level__c</fullName>
        <label>Unomy Contacts Mgmt C Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Directors__c</fullName>
        <label>Unomy Contacts Mgmt Directors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Non_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Non Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_VP_Level__c</fullName>
        <label>Unomy Contacts Mgmt VP Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Max__c</fullName>
        <label>Unomy Estimated Revenue Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>